--- a/Backup/WEEK01_LECTURE/网站演示/ShopProject/Web.config
+++ b/Backup/WEEK01_LECTURE/网站演示/ShopProject/Web.config
@@ -37,7 +37,7 @@
             识别进入用户的
             安全身份验证模式。 
         -->
-		<authentication mode="Windows"/>
+		<authentication mode="None"/>
 		<!--
             如果在执行请求的过程中出现未处理的错误，
             则通过 <customErrors> 节可以配置相应的处理步骤。具体说来，
