--- a/WEEK14_LECTURE_DEMO/Web.config
+++ b/WEEK14_LECTURE_DEMO/Web.config
@@ -23,7 +23,22 @@
 		</sectionGroup>
 	</configSections>
 	<appSettings/>
-	<connectionStrings/>
+	<connectionStrings>
+		<add name="sqlConnStr" connectionString="server=.;database=aspnetdb;uid=ASPNET;PWD=ASPNET" />
+	</connectionStrings>
+
+	<!--控制某张页面只能由某个角色访问-->
+	<location path="MemberAndRoleControl_Manager.aspx">
+		<system.web>
+			<authorization>
+				<allow roles="PowerUser"/>
+				<deny users="*"/>
+			</authorization>
+		</system.web>
+
+	</location>
+
+	
 	<system.web>
 		<!-- 
             设置 compilation debug="true" 可将调试符号插入 
@@ -44,16 +59,46 @@
       ASP.NET 用于识别进入用户的 
       安全身份验证模式。
     -->
-		<authentication mode="Windows" />
+		<!--<authentication mode="Windows" />-->
 		<!--<authentication mode="Forms">
 			<forms loginUrl="AuthenticationExample_Login.aspx" defaultUrl="AuthenticationExample_Home.aspx"  name="WEEK14_LECTURE_DEMO"
               protection="All" timeout="60"/>
 		</authentication>-->
 		<!--<authorization>
-      <allow roles="Admin"/>
-      <allow users="SystemManager"/>
-      <deny users="*"/>
-    </authorization>-->
+				<allow users="SystemManager" />
+				<deny users="?" />
+		-->
+		
+		
+		<authentication mode="Forms">
+			<forms loginUrl="MemberAndRoleControl_Login.aspx" defaultUrl="MemberAndRoleControl_Home.aspx"  name="WEEK14_LECTURE_DEMO"
+              protection="All" timeout="60"/>
+		</authentication>
+		<!--<authorization>
+			<allow roles="PowerUser"/>
+			<deny users="*"/>-->
+
+
+		
+		<membership defaultProvider="SqlMembershipProvider">
+			<providers>
+				<clear/>
+				<add name="SqlMembershipProvider" type="System.Web.Security.SqlMembershipProvider" connectionStringName="sqlConnStr" requiresQuestionAndAnswer="false" minRequiredPasswordLength="1" minRequiredNonalphanumericCharacters="0"/>
+			</providers>
+		</membership>
+		<roleManager defaultProvider="SqlRoleProvider"
+      enabled="true">
+			<providers>
+				<clear/>
+				<add
+          name="SqlRoleProvider"
+          type="System.Web.Security.SqlRoleProvider"
+          connectionStringName="sqlConnStr"
+          applicationName="/" />
+			</providers>
+		</roleManager>
+
+
 		<!--
            通过 <customErrors> 节，可以配置
        在执行请求的过程中出现未处理的错误时要执行 
