--- a/WEEK14_LAB/Web.config
+++ b/WEEK14_LAB/Web.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<!--
+<!-- 
     注意: 除了手动编辑此文件，还可用 
     Web 管理工具配置应用程序设置。可使用
     Visual Studio 中的“网站”->“Asp.Net 配置”选项。
@@ -8,6 +8,7 @@
     \Windows\Microsoft.Net\Framework\vx.x\Config 中
 -->
 <configuration>
+
 
 	<configSections>
 		<sectionGroup name="system.web.extensions" type="System.Web.Configuration.SystemWebExtensionsSectionGroup, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
@@ -22,23 +23,11 @@
 			</sectionGroup>
 		</sectionGroup>
 	</configSections>
-	<appSettings/>
+
+	<appSettings />
 	<connectionStrings>
-		<add name="sqlConnStr" connectionString="server=10.22.149.105;database=aspnetdb;uid=ASPNET;PWD=ASPNET" />
+		<add name="sqlConnectionString" connectionString="server=10.22.149.105;database=aspnetdb2;uid=sa;PWD=liuxiaozeng" />
 	</connectionStrings>
-
-	<!--控制某张页面只能由某个角色访问-->
-	<!--	<location path="MemberAndRoleControl_Manager.aspx">
-		<system.web>
-			<authorization>
-				<allow roles="*"/>
-				<deny users="*"/>
-			</authorization>
-		</system.web>
-
-	</location>-->
-
-	
 	<system.web>
 		<!-- 
             设置 compilation debug="true" 可将调试符号插入 
@@ -47,69 +36,50 @@
             设置为 true。
     -->
 		<compilation debug="true">
+
 			<assemblies>
 				<add assembly="System.Core, Version=3.5.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
 				<add assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
 				<add assembly="System.Data.DataSetExtensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
 				<add assembly="System.Xml.Linq, Version=3.5.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
 			</assemblies>
+
 		</compilation>
 		<!--
-          通过 <authentication> 节，可配置 
+            通过 <authentication> 节，可配置 
       ASP.NET 用于识别进入用户的 
       安全身份验证模式。
     -->
-		<!--<authentication mode="Windows" />-->
-		<!--<authentication mode="Forms">
-			<forms loginUrl="AuthenticationExample_Login.aspx" defaultUrl="AuthenticationExample_Home.aspx"  name="WEEK14_LECTURE_DEMO"
-              protection="All" timeout="60"/>
-		</authentication>-->
-		<!--<authorization>
-			<allow users="SystemManager" />
-			<deny users="?"/>
-		</authorization>-->
-
 
 		<authentication mode="Forms">
-			<forms loginUrl="MemberAndRoleControl_Login.aspx" defaultUrl="MemberAndRoleControl_Home.aspx"  name="WEEK14_LECTURE_DEMO"
+			<forms loginUrl="Login.aspx" defaultUrl="Default.aspx"  name="WEEK14_LAB"
               protection="All" timeout="60"/>
 		</authentication>
-		<authorization>
-		
-		</authorization>
 
-		
 		<membership defaultProvider="SqlMembershipProvider">
 			<providers>
 				<clear/>
-				<add name="SqlMembershipProvider" type="System.Web.Security.SqlMembershipProvider" connectionStringName="sqlConnStr" requiresQuestionAndAnswer="false" minRequiredPasswordLength="1" minRequiredNonalphanumericCharacters="0"/>
+				<add name="SqlMembershipProvider" type="System.Web.Security.SqlMembershipProvider" 
+						 connectionStringName="sqlConnectionString" requiresQuestionAndAnswer="false" 
+						 minRequiredPasswordLength="1" minRequiredNonalphanumericCharacters="0"/>
 			</providers>
 		</membership>
-		<roleManager defaultProvider="SqlRoleProvider"
-      enabled="true">
-			<providers>
-				<clear/>
-				<add
-          name="SqlRoleProvider"
-          type="System.Web.Security.SqlRoleProvider"
-          connectionStringName="sqlConnStr"
-          applicationName="/" />
-			</providers>
-		</roleManager>
-
-
+		
+		
 		<!--
-           通过 <customErrors> 节，可以配置
+            通过 <customErrors> 节，可以配置
        在执行请求的过程中出现未处理的错误时要执行 
        的操作。具体而言，
        开发人员通过该节可配置要显示的 html 错误页，
        以代替错误堆栈跟踪。
 
-           <customErrors mode="RemoteOnly" defaultRedirect="GenericErrorPage.htm">
-             <error statusCode="403" redirect="NoAccess.htm" />
-             <error statusCode="404" redirect="FileNotFound.htm" />
-           </customErrors>
+        <customErrors mode="RemoteOnly" defaultRedirect="GenericErrorPage.htm">
+            <error statusCode="403" redirect="NoAccess.htm" />
+            <error statusCode="404" redirect="FileNotFound.htm" />
+        </customErrors>
         -->
+
+
 		<pages>
 			<controls>
 				<add tagPrefix="asp" namespace="System.Web.UI" assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
@@ -126,7 +96,10 @@
 		<httpModules>
 			<add name="ScriptModule" type="System.Web.Handlers.ScriptModule, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
 		</httpModules>
+
+
 	</system.web>
+
 	<system.codedom>
 		<compilers>
 			<compiler language="c#;cs;csharp" extension=".cs" warningLevel="4"
@@ -142,6 +115,7 @@
 			</compiler>
 		</compilers>
 	</system.codedom>
+
 	<!-- 
         system.webServer 节是在 Internet Information Services 7.0 下运行 ASP.NET AJAX 
         所必需的。对于早期版本的 IIS，不必保留此节。
